--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": ".eslintrc.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
-    "pg": "^7.4.1"
+    "express-validator": "^5.0.1",
+    "pg": "^7.4.1",
+    "validator": "^9.4.1",
+    "xss": "^0.3.7"
   },
   "devDependencies": {
     "eslint": "^4.17.0",
