fix text validation

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "node app.js",
-    "eslint": "eslint *.js **/*.js"
+    "eslint": "eslint *.js **/*.js --fix"
   },
   "keywords": [],
   "author": "",
